--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord-player": "^4.1.2",
     "discord.js": "^12.5.1",
     "ffmpeg-static": "^4.3.0",
+    "quick.db": "^7.1.3",
     "ws": ">=7.4.6",
     "ytdl-core": "^4.8.2"
   }
